--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%-5p %d %c - %m%n
  
-log4j.logger.org.springframework=INFO
+log4j.logger.org.springframework=TRACE
 log4j.logger.ie.cit.adf=TRACE
 log4j.logger.org.springframework.transaction=TRACE
 log4j.logger.org.springframework.jdbc=TRACE
