Added PDF View, Content Type Negotiation, REST (Json)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,15 @@
 		<url-pattern>/todo/*</url-pattern>
 	</servlet-mapping>
 
+	<filter>
+		<filter-name>HiddenHttpMethodFilter</filter-name>
+		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>HiddenHttpMethodFilter</filter-name>
+		<servlet-name>dispatcher</servlet-name>
+	</filter-mapping>
+
 	<servlet>
 		<servlet-name>timeServlet</servlet-name>
 		<servlet-class>ie.cit.adf.web.TimeServlet</servlet-class>
